# Neumont-Marketplace

./: .gitignore  README.md  compose.yaml  makefile  package-lock.json  tailwind.config.js
backend/: Cargo.toml  indexing.py  toogle_indexer.ts
backend/src/: error.rs  main.rs
chat/: Dockerfile  cassandra.js  db.cql  index.js  package-lock.json  package.json
chat/test-chat/: package-lock.json  package.json
chat/test-chat/src/app/: page.js
chat/test-chat/src/app/components/: chat.js
frontend/: .gitignore  package-lock.json  package.json  tsconfig.json
frontend/app/: actions.ts  layout.tsx  page.tsx
frontend/app/[userId]/listing/: page.tsx
frontend/app/auth/: page.tsx
frontend/app/auth/callback/: route.ts
frontend/app/auth/confirm/: route.ts
frontend/app/components/: listingItems.tsx  sideMenu.tsx
frontend/app/componets/: card-tab.tsx  card.tsx  chat.js  filter-menu.tsx  footer.tsx  header.tsx  price-slider.tsx  profile-side.tsx
frontend/app/componets/listing/: card.tsx  filter-menu.tsx  price-slider.tsx
frontend/app/listing/: page.tsx
frontend/app/listings/: page.tsx
frontend/app/message/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/profile-page/: page.tsx
frontend/app/register/: actions.ts  page.tsx
frontend/componets/: profile-side.tsx
frontend/lib/: auth-actions.ts  list-actions.ts  listing-actions.ts
frontend/lib/supabase/: middleware.ts
