[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
ansi-to-html = { version = "0.2.2", features = ["lazy-init"] }
axum = "0.8.4"
color-eyre = "0.6.5"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
